updated project files

--- a/index.html
+++ b/index.html
@@ -3,35 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduPath AI - Smart Career & Education Guidance Platform</title>
-    <meta name="description" content="AI-powered career guidance platform with real-time government data from AISHE, NIRF & Scholarships.gov.in. Take personalized aptitude quiz, find colleges, scholarships & career paths." />
-    <meta name="author" content="EduPath AI" />
-    <meta name="keywords" content="career guidance, education platform, college finder, scholarship search, aptitude quiz, government data, AISHE, NIRF, NSP, rural students" />
 
-    <meta property="og:title" content="EduPath AI - Smart Career & Education Guidance Platform" />
-    <meta property="og:description" content="AI-powered career guidance with authentic government data. Find colleges, scholarships & career paths with personalized recommendations." />
+    <!-- Page Title -->
+    <title>Career Path - Smart Career & Education Guidance Platform</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Career Path is an AI-powered career guidance platform that uses authentic government data from AISHE, NIRF, and Scholarships.gov.in. Explore career options, find the best colleges, scholarships, and take personalized aptitude quizzes."
+    />
+
+    <!-- SEO Keywords -->
+    <meta
+      name="keywords"
+      content="Career Path, career guidance, career counseling, AI education platform, college finder, scholarship search, aptitude quiz, AISHE, NIRF, NSP, rural students, education in India"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Career Path Team" />
+
+    <!-- Open Graph (Facebook / LinkedIn / WhatsApp Preview) -->
+    <meta property="og:title" content="Career Path - Smart Career & Education Guidance Platform" />
+    <meta
+      property="og:description"
+      content="AI-powered career guidance with real-time government data. Discover colleges, scholarships, and career opportunities tailored to your skills."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://careerpath.example.com" />
+    <meta property="og:image" content="https://careerpath.example.com/og-image.png" />
 
+    <!-- Twitter Card (Twitter Preview) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@edupath_ai" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:site" content="@careerpath_ai" />
+    <meta name="twitter:title" content="Career Path - Smart Career & Education Guidance Platform" />
+    <meta
+      name="twitter:description"
+      content="AI-powered career guidance with personalized recommendations based on real government data."
+    />
+    <meta name="twitter:image" content="https://careerpath.example.com/twitter-image.png" />
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "EduPath AI",
-      "description": "AI-powered career guidance platform with government API integration",
-      "applicationCategory": "EducationApplication",
-      "operatingSystem": "Web Browser",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "INR"
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Career Path",
+        "url": "https://careerpath.example.com",
+        "description": "AI-powered career guidance platform with government API integration for colleges, scholarships, and aptitude-based career paths.",
+        "applicationCategory": "EducationApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "INR"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "Career Path Team",
+          "url": "https://careerpath.example.com"
+        }
       }
-    }
     </script>
   </head>
 
