--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Page Title -->
-    <title>Career Path - Smart Career & Education Guidance Platform</title>
+    <title>Career path</title>
 
     <!-- Meta Description -->
     <meta
       name="description"
-      content="Career Path is an AI-powered career guidance platform that uses authentic government data from AISHE, NIRF, and Scholarships.gov.in. Explore career options, find the best colleges, scholarships, and take personalized aptitude quizzes."
+      content="career path" 
     />
 
     <!-- SEO Keywords -->
